fix overflow of metrics happening right to the box

--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,18 @@ code {
 .custom-date-filter-input:hover {
   cursor: pointer;
 }
+
+h1::first-line {
+  color: blue;
+}
+h1 {
+  color: red;
+}
+
+.metrics-box::first-line {
+  font-style: italic;
+}
+
+.test-container::first-line {
+  font-style: italic;
+}
